--- a/data/web/groupConfig.html
+++ b/data/web/groupConfig.html
@@ -115,11 +115,12 @@
             var index = 0;
             for (index = 0; index < global.numberOfGroups; ++index) {
                 $("#groupNameTable").append("<div class=\"row\"><div class=\"column\">Group " + String.fromCharCode(65 + index) + ": </div></div><div class=\"row\"><div class=\"column\"> <input type=\"text\" id=\"group" + index + "\"/></div><div class=\"column\"><button type=\"button\" onclick=\"setName(" + index + ")\" class=\"btn btn-secondary mx-2\">Set Name</button\></div><div class=\"column\"><button type=\"button\" onclick=\"deleteName(" + index + ")\" class=\"btn btn-secondary mx-2\">Delete Name</button></div><div class=\"column\"><button type=\"button\" class=\"btn btn-info mx-2\" onclick=\"clearGroup(" + index + ")\">Clear Laptime</button></div></div>");
+                getName(index);
             }
         }
 
         function setName(group) {
-            var name = ""; 
+            var name = "";
             name = document.getElementById("group" + group).value;
 
             if ("" == name) {
@@ -134,6 +135,16 @@
                 });
 
             }
+        }
+
+        function getName(group) {
+            global.wsClient.getName(group).then(function (rsp) {
+                document.getElementById("group" + group).value = rsp.name;
+            }).catch(function (err) {
+                if ("undefined" !== typeof err) {
+                    console.error(err);
+                }
+            });
         }
 
         function deleteName(group) {
