--- a/data/web/groupConfig.html
+++ b/data/web/groupConfig.html
@@ -128,6 +128,7 @@
             } else {
                 global.wsClient.setName(group, name).then(function (rsp) {
                     console.info("Set Name \"" + rsp.name + "\" for Group " + rsp.group);
+                    document.getElementById("group" + group).disabled = true;
                 }).catch(function (err) {
                     if ("undefined" !== typeof err) {
                         console.error(err);
@@ -148,7 +149,14 @@
         }
 
         function deleteName(group) {
-            console.log("Name Deleted");
+            global.wsClient.clearName(group).then(function (rsp) {
+                console.log("Name deleted for Group " + rsp.group);
+                return getName(group);
+            }).catch(function (err) {
+                if ("undefined" !== typeof err) {
+                    console.error(err);
+                }
+            });
         }
 
         $(document).ready(function () {
