--- a/data/web/groupConfig.html
+++ b/data/web/groupConfig.html
@@ -38,6 +38,7 @@
             <label for="NumberOfGroups" class="form-label">Number Of Groups: </label>
             <input type="number" class="form-range" min="0" max="10" id="NumberOfGroups" />
             <button id="buttonSaveGroups" type="submit" class="btn btn-secondary" onclick="setGroups()">Set</button>
+            <button type="button" class="btn btn-danger mx-2" onclick="clearAll()">Clear All </button>
         </div>
 
         <div class="container" id="groupNameTable">
