--- a/data/web/index.html
+++ b/data/web/index.html
@@ -77,6 +77,7 @@
             milliseconds: 0,
             wsClient: new cpjs.ws.Client(),
             numberOfGroups: 0,
+            namesOfGroups : [],
             selectedGroup: 0,
             expectedEvents: 0,
             resultTable: [],
@@ -243,8 +244,9 @@
             } else if("TABLE" == rsp.event){
                 if(0 < global.expectedEvents)
                 {
-                    console.log("Group " + rsp.activeGroup + ": " + rsp.duration);
+                    console.log("Group " + rsp.activeGroup + " named \"" + rsp.name + "\" : " + rsp.duration);
                     tableInput(rsp.activeGroup, rsp.duration);
+                    global.namesOfGroups[rsp.activeGroup] = rsp.name;
                     global.expectedEvents--;
                     if(0 == global.expectedEvents)
                     {
@@ -262,14 +264,14 @@
             var index = 0;
 
             for (index = 0; index < global.numberOfGroups; ++index) {
-                $("#groupSelectionBar").append("<button type=\"button\" class=\"btn btn-primary mx-2\" onclick=\"selectGroup(" + index + ")\">Group " + String.fromCharCode(65 + index) + "</button>");
+                $("#groupSelectionBar").append("<button type=\"button\" class=\"btn btn-primary mx-2\" onclick=\"selectGroup(" + index + ")\">" +  global.namesOfGroups[index] + "</button>");
             }
         }
 
         function selectGroup(id) {
             if (global.numberOfGroups > id) {
                 global.selectedGroup = id;
-                $("#showSelectedGroup").html("Group " + String.fromCharCode(65 + global.selectedGroup));
+                $("#showSelectedGroup").html(global.namesOfGroups[global.selectedGroup]);
             }
         }
 
@@ -319,7 +321,7 @@
                 $("#resultTable > tbody").append("<tr><th scope=\"row\">" +
                     (index + 1) +
                     "</th><td>" +
-                    String.fromCharCode(65 + sortedTable[index].id) +
+                    global.namesOfGroups[sortedTable[index].id] +
                     "</td><td>" +
                     fastestLap +
                     "</td></tr>");
@@ -337,7 +339,7 @@
         }
 
         function getSavedTable() {
-            global.wsClient.getTable().then(function (rsp) {
+            return global.wsClient.getTable().then(function (rsp) {
                 
                 if(rsp.groups === global.numberOfGroups)
                 {
@@ -350,6 +352,7 @@
                 /*  TODO
                  *  Wait for global.expectedEvents to be 0, or to timeout
                  */
+                return Promise.resolve();
 
             }).catch(function (err) {
                 if ("undefined" !== typeof err) {
@@ -371,14 +374,16 @@
                 
                 return getGroups().then(function() {
                     updateTimer();
-                    createGroups();
                     selectGroup(0);
                     createResultTable();              
                     return getSavedTable();
                 }).then(function() {
-                    updateResultTable();
-                    global.ready = true;
-                    return Promise.resolve();
+                    setTimeout(function(){
+                        createGroups();
+                        updateResultTable();
+                        global.ready = true;
+                        return Promise.resolve();
+                    }, 1000); // See To-Do in getSavedTable(). Optimization required.
                 }).catch(function(err) {
                     return Promise.reject();
                 });
